# rust-csharp-async-ffi

./: Cargo.toml  LICENSE  README.md
binding/csharp/: async_ffi.cs
binding/python/: async_ffi.py
dotnet/: .gitignore  Helpers.cs  Program.cs  RustInterop.cs  RustInteropManual.cs  RustInteropMpsc.cs  RustInteropTokio.cs  RustInteropUniFFI.cs  dotnet.csproj  dotnet.sln
src/: ffi.rs  function.rs  lib.rs
