[package]
name = "async-ffi"
authors = ["Stephen Tse"]
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
name = "async_ffi"
path = "src/lib.rs"

[[bin]]
name = "uniffi_bindgen"
path = "uniffi_bindgen.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = { version = "2" }
uniffi = { version = "0.29.4", features = ["cli", "tokio"] }
async-compat = { version = "0.2.0" }
rand = { version = "0.9" }
futures = { version = "0.3" }
assertor = { version = "0.0.4" }

[build-dependencies]
uniffi = { version = "0.29.4", features = ["build"] }